--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -3,7 +3,7 @@ buildscript {
         mavenCentral()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.1'
+        classpath 'com.android.tools.build:gradle:2.3.2'
     }
 }
 apply plugin: 'com.android.application'
@@ -17,7 +17,7 @@ android {
     buildToolsVersion "25.0.2"
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 25
     }
 }
@@ -39,4 +39,6 @@ dependencies {
 
 
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
+
+    compile 'com.jakewharton.timber:timber:4.5.1'
 }
