--- a/XYZReader/build.gradle
+++ b/XYZReader/build.gradle
@@ -41,4 +41,6 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
 
     compile 'com.jakewharton.timber:timber:4.5.1'
+    compile 'com.jakewharton:butterknife:8.6.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
 }
